--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Expense Tracker Dashboard</title>
+    <title>MoneyLens.ai</title>
+    <meta name="description" content="AI-powered financial management and expense tracking" />
+    <meta property="og:title" content="MoneyLens.ai" />
+    <meta property="og:description" content="AI-powered financial management and expense tracking" />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
